--- a/crowdsource-api/package.json
+++ b/crowdsource-api/package.json
@@ -48,10 +48,12 @@
         "node": "12.16.0"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.12.11",
         "del": "^5.1.0",
         "fetch-mock": "^9.11.0",
         "jest": "^26.6.3",
         "jest-when": "^3.2.1",
+        "jquery": "^3.5.1",
         "nodemon": "^2.0.3",
         "supertest": "^6.1.3"
     },
