|Umair + Sreejith| Update circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,29 +123,29 @@ jobs:
 workflows:
   build_test_deploy:
     jobs:
-      # - node/test:
-      #     version: "13.4"
+      - node/test:
+          version: "13.4"
 
       - create-workspace:
           name: create-workspace
-          # requires:
-          #    - node/test
+          requires:
+             - node/test
           filters:
             branches:
-              only: [master, organize_file_structure]
+              only: master
 
-      # - db_migrate_aws:
-      #     name: migrate_dev_aws
-      #     db_name: ${DEV_DB_NAME}
-      #     requires:
-      #        - create-workspace
+      - db_migrate_aws:
+          name: migrate_dev_aws
+          db_name: ${DEV_DB_NAME}
+          requires:
+             - create-workspace
 
-      # - build_ui_push_to_s3:
-      #     name: build_dev_ui
-      #     env_name: dev
-      #     distributionId: ${DEV_DISTRIBUTION_ID}
-      #     requires:
-      #       - push_dev_image
+      - build_ui_push_to_s3:
+          name: build_dev_ui
+          env_name: dev
+          distributionId: ${DEV_DISTRIBUTION_ID}
+          requires:
+            - push_dev_image
 
       - aws-ecr/build-and-push-image:
           name: push_dev_image
@@ -153,8 +153,7 @@ workflows:
           tag: dev
           path: ./crowdsource-api
           requires:
-            - create-workspace
-          #   - migrate_dev_aws
+            - migrate_dev_aws
 
       - aws-ecr/build-and-push-image:
           name: push_dev_db_refresher_image
@@ -163,8 +162,7 @@ workflows:
           path: ./db-refresher
           tag: "dev,test,prod"
           requires:
-            - create-workspace
-          #   - migrate_dev_aws
+            - migrate_dev_aws
 
       - eks_fargate_deployment:
           name: dev_deployment_eks
@@ -178,81 +176,78 @@ workflows:
           env_name: dev
           requires:
             - dev_deployment_eks
-            # - build_dev_ui      
+            - build_dev_ui      
 
       - approve_to_deploy:
           name: approve_test_deployment_eks
           type: approval
           requires:
             - functional_tests_dev
-          filters:
-            branches:
-              only: master
 
-      # - db_migrate_aws:
-      #     name: migrate_test_aws
-      #     db_name: ${TEST_DB_NAME}
-      #     requires:
-      #       - approve_test_deployment_eks
+      - db_migrate_aws:
+          name: migrate_test_aws
+          db_name: ${TEST_DB_NAME}
+          requires:
+            - approve_test_deployment_eks
 
-      # - build_ui_push_to_s3:
-      #     name: build_test_ui
-      #     env_name: test
-      #     distributionId: ${TEST_DISTRIBUTION_ID}
-      #     requires:
-      #       - push_test_image
+      - build_ui_push_to_s3:
+          name: build_test_ui
+          env_name: test
+          distributionId: ${TEST_DISTRIBUTION_ID}
+          requires:
+            - push_test_image
 
-      # - aws-ecr/build-and-push-image:
-      #     name: push_test_image
-      #     repo: ${REPO}
-      #     tag: test
-      #     requires:
-      #       - migrate_test_aws
+      - aws-ecr/build-and-push-image:
+          name: push_test_image
+          repo: ${REPO}
+          tag: test
+          requires:
+            - migrate_test_aws
 
-      # - eks_fargate_deployment:
-      #     name: test_deployment_eks
-      #     cluster-name: ${CLUSTER_NAME}
-      #     env-name: test
-      #     requires:
-      #       - push_test_image
+      - eks_fargate_deployment:
+          name: test_deployment_eks
+          cluster-name: ${CLUSTER_NAME}
+          env-name: test
+          requires:
+            - push_test_image
 
-      # - run_functional_tests:
-      #     name: functional_tests_test
-      #     env_name: test
-      #     requires:
-      #       - test_deployment_eks
-      #       - build_test_ui
+      - run_functional_tests:
+          name: functional_tests_test
+          env_name: test
+          requires:
+            - test_deployment_eks
+            - build_test_ui
 
-      # - approve_to_deploy:
-      #     name: approve_prod_deployment_eks
-      #     type: approval
-      #     requires:
-      #       - functional_tests_test
+      - approve_to_deploy:
+          name: approve_prod_deployment_eks
+          type: approval
+          requires:
+            - functional_tests_test
 
-      # - db_migrate_aws:
-      #     name: migrate_prod_aws
-      #     db_name: ${DB_NAME}
-      #     requires:
-      #       - approve_prod_deployment_eks
+      - db_migrate_aws:
+          name: migrate_prod_aws
+          db_name: ${DB_NAME}
+          requires:
+            - approve_prod_deployment_eks
 
-      # - build_ui_push_to_s3:
-      #     name: build_prod_ui
-      #     env_name: prod
-      #     distributionId: ${PROD_DISTRIBUTION_ID}
-      #     requires:
-      #       - push_prod_image
+      - build_ui_push_to_s3:
+          name: build_prod_ui
+          env_name: prod
+          distributionId: ${PROD_DISTRIBUTION_ID}
+          requires:
+            - push_prod_image
 
-      # - aws-ecr/build-and-push-image:
-      #     name: push_prod_image
-      #     repo: ${REPO}
-      #     tag: prod
-      #     requires:
-      #       - migrate_prod_aws
+      - aws-ecr/build-and-push-image:
+          name: push_prod_image
+          repo: ${REPO}
+          tag: prod
+          requires:
+            - migrate_prod_aws
 
-      # - eks_fargate_deployment:
-      #     name: prod_deployment_eks
-      #     cluster-name: ${CLUSTER_NAME}
-      #     env-name: prod
-      #     requires:
-      #       - push_prod_image
+      - eks_fargate_deployment:
+          name: prod_deployment_eks
+          cluster-name: ${CLUSTER_NAME}
+          env-name: prod
+          requires:
+            - push_prod_image
             
