--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "start-cluster": "pm2 start src/server.js -i 2",
     "test": "ENCRYPTION_KEY=CjksSAhoncsuosuy68sbLd35KkcHrSuwKJerEFCEWof= jest",
     "gulp": "gulp",
+    "stylelint": " stylelint \"views/**/*.css\"  --fix",
+    "htmllint": " htmllint \"views/**/*.ejs\" ",
+    "prettierlint": " prettier --write ./views/*",
+    "ci-lint": "npm run stylelint && npm run htmllint && npm run prettier",
     "functional_test": "cd functional_tests && npm i && gauge run specs/BoloIndia.spec",
     "db-migrate": "npx db-migrate up --config migrations/config/migration_config.json -e dev",
     "prepare": "husky install"
@@ -62,14 +66,21 @@
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.3.0",
+    "gulp-flatten": "^0.4.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-replace-task": "^2.0.1",
+    "htmllint": "^0.8.0",
+    "htmllint-cli": "0.0.7",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-when": "^3.2.1",
     "nodemon": "^2.0.3",
+    "prettier": "2.2.1",
+    "stylelint": "^13.13.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
     "supertest": "^6.1.3",
     "yargs": "^16.2.0"
   },
