[Sunny | Priyanshu | ayush] update prettier htmlint stylelint path

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "watch:nodemon": "cd crowdsource-api && npm run watch",
     "start-cluster": "cd crowdsource-api && pm2 start src/server.js -i 2",
     "test": "run-p test:api test:ui",
-    "stylelint": " stylelint \"views/**/*.css\"  --fix",
-    "htmllint": " htmllint \"views/**/*.ejs\" ",
-    "prettierlint": " prettier --write ./views/*",
+    "stylelint": " stylelint \"crowdsource-ui/**/*.css\"  --fix",
+    "htmllint": " htmllint \"crowdsource-ui/**/*.ejs\" ",
+    "prettierlint": " prettier --write ./crowdsource-ui/* ./crowdsource-api/*",
     "ci-lint": "npm run stylelint && npm run htmllint && npm run prettier",
     "test:api": "cd crowdsource-api && npm run test",
     "test:ui": "cd crowdsource-ui && npm run test",
