--- a/data-pipelines/package.json
+++ b/data-pipelines/package.json
@@ -9,6 +9,7 @@
   "author": "Rajat Singhal",
   "license": "ISC",
   "dependencies": {
-    "pg": "^7.8.2"
+    "pg": "^7.8.2",
+    "csvtojson": "2.0.10"
   }
 }
