|Umair| Dekho/Suno loading image/audio from cdn for test and prod

--- a/crowdsource-ui/src/assets/config/env.config.prod.json
+++ b/crowdsource-ui/src/assets/config/env.config.prod.json
@@ -1,3 +1,4 @@
 { 
-    "apiUrl":  "https://boloindia-api.nplt.in"
+    "apiUrl":  "https://boloindia-api.nplt.in",
+    "cdnUrl": "https://du5pn46fknr37.cloudfront.net"
 }
