--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node": "12.16.0"
   },
   "devDependencies": {
+    "chokidar-socket-emitter": "^0.6.0",
     "del": "^5.1.0",
     "fetch-mock": "^9.11.0",
     "gulp": "^4.0.2",
