--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "stylelint-config-standard": "^22.0.0",
     "supertest": "^6.1.3",
     "yargs": "^16.2.0"
-  }
+  },
+  "dependencies": {}
 }
