--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
             sudo rm -rf /var/lib/apt/lists/*
             npm run install:ft
             npm run functional_test -- -- --env <<parameters.env_name>>
+            psql "postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>" -f functional_tests/sql/deleteSeedData.sql
 
   approve_to_deploy:
     docker:
