| Priyanshu| should not allow deploy to test with passing all FT

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,8 +187,7 @@ workflows:
           name: approve_test_deployment_eks
           type: approval
           requires:
-            - dev_deployment_eks
-            - build_dev_ui
+            functional_tests_test
 
       - db_migrate_aws:
           name: migrate_test_aws
