| Priyanshu| should not allow deploy to test with passing all FT

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ workflows:
       - create-workspace:
           name: create-workspace
           requires:
-             - node/test
+            - node/test
           filters:
             branches:
               only: [master,bolo_india]
@@ -181,13 +181,13 @@ workflows:
           db_name: ${DEV_DB_NAME}
           requires:
             - dev_deployment_eks
-            - build_dev_ui      
+            - build_dev_ui
 
       - approve_to_deploy:
           name: approve_test_deployment_eks
           type: approval
           requires:
-            - functional_tests_test
+            - functional_tests_dev
 
       - db_migrate_aws:
           name: migrate_test_aws
