|Sreejith| Store gauge screenshots as artifacts in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,9 @@ jobs:
             npm run install:ft
             npm run functional_test -- -- --env <<parameters.env_name>>
             psql "postgresql://${DEV_DB_USER}:${DB_PASS_AWS}@${DB_HOST_AWS}/<< parameters.db_name >>" -f functional_tests/sql/deleteSeedData.sql
+      - store_artifacts:
+          path: functional_tests/.gauge/screenshots
+          destination: screenshots
 
   approve_to_deploy:
     docker:
