--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,7 @@ workflows:
             - node/test
           filters:
             branches:
-              only: [master,bolo_india]
+              only: master
 
       - db_migrate_aws:
           name: migrate_dev_aws
