--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -190,7 +190,8 @@ workflows:
           name: approve_test_deployment_eks
           type: approval
           requires:
-            - functional_tests_dev
+            - dev_deployment_eks
+            - build_dev_ui
 
       - db_migrate_aws:
           name: migrate_test_aws
