--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ workflows:
           repo: ${DB_REFRESHER_REPO}
           dockerfile: Dockerfile-dbRefresh
           path: ./db-refresher
-          tag: "dev,test,prod"
+          tag: "dev,test,prod,uat"
           requires:
             - migrate_dev_aws
 
