--- a/crowdsource-api/package.json
+++ b/crowdsource-api/package.json
@@ -37,6 +37,7 @@
         "i18n": "^0.13.2",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.1",
+        "morgan-body": "^2.6.5",
         "multer": "^1.4.2",
         "node-fetch": "^2.6.1",
         "pg-promise": "^10.5.2",
